// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTitle should display children 1`] = `
<Aware>
  <Title
    color="default"
  >
    content
  </Title>
</Aware>
`;

exports[`PageTitle should set color default 1`] = `
<Aware>
  <Title
    color="default"
  >
    content
  </Title>
</Aware>
`;

exports[`PageTitle should set color primary 1`] = `
<Aware>
  <Title
    color="primary"
  >
    content
  </Title>
</Aware>
`;
